[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayparam"
version = "0.2.3"
description = "Fetch and normalize parameterized URLs from the Internet Archive Wayback CDX API (OSINT-friendly)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [{name = "Your Name"}]
keywords = ["osint", "wayback", "url", "parameters", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
  "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
wayparam = "wayparam.cli:main"

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com"
Issues = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]
